--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
             <div class="name">
                 Name:
                 <input type="text" class="input">
+
                 Surname:
                 <input type="text" class="input">
             </div>
@@ -236,9 +237,9 @@
             </div>
 
             <div class="auth-buttons">
-                <button class="submit" type="submit">Submit</button>
-                <button class="submit" type="reset">Reset</button>
-                <button class="submit" type="button" onclick="helloWorld()" >Helloworld</button>
+                <button class="button" type="submit">Submit</button>
+                <button class="button" type="reset">Reset</button>
+                <button class="button" type="button" onclick="helloWorld()" >Helloworld</button>
 
             </div>
         
